1.3.0
- added Request Threshold and Provide Threshold
- removed Minimum Delivery Size and Ignore Minimum Delivery Size
- removed Best Effort, Provide Threshold = 1 does the same now
- added Disable Warnings Messages control signal #34
- limit messages to force where possible #40

1.2.8
- added German locale
- fixed bug in Chinese locale
- switched to 128x128 tech icon
- overloaded trains no longer cause requesters to flip to providers during delivery
- set expected train inventory to default to active

1.2.7
- fixed potential nil references in first_signal and stop ghost entities

1.2.6
- fixed error when schedule is referencing non existing items

1.2.5
- replaced workaround with get_fluid_count and get_fluid_contents

1.2.4
- added toggle between output of positive load, negative unload amount and expected train inventory after (un-)loading
- added Chinese locale by 745275633
- formated setting descriptions, should be less wall of text
- fixed a crash when adding carriages to trains parked at provider or requester

1.2.3
- fixed desync https://forums.factorio.com/viewtopic.php?f=23&t=46873
- fixed dispatcher picks providers with incompatible train length
- duplicate names are checked across all train-stops instead of only LTN Stops
- improved performance of checking duplicate names by using events introduced with 0.15

1.2.2
- overloading trains updates delivery size once per update interval (before update was only done once train leaves provider)
- fixed overloading trains reserved too much of an item/fluid in provider
- fixed fluid deliveries where accidentally deleted at departure from provider

1.2.1
- updated mod setting descriptions
- replaced floating-text hack to get inventory sizes with 0.15 functions
- added support of icons{} to signal generation

1.2.0
- moved config.lua to mod settings
- added support for any FluidWagon for fluid transport
- removed support of RailTanker (RailTankers will be ignored, removed fake item conversions)